--- a/assets/css/myedits.css
+++ b/assets/css/myedits.css
@@ -65,3 +65,12 @@
   margin-left: 10px;
   display: inline;
 }
+
+.swe_position {
+  position: relative;
+  display: inline;
+  margin-left: 10px;
+  font-size: 15px;
+  top: -7px;
+  font-weight: bold;
+}
